# How-to-implement-authentication-in-FastAPI

./: main.py  pyproject.toml
core/: authentication.py  jwt.py  schemas.py  utilities.py
